# avito-python-sdk

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: avito-openapi-sync.yml  ci.yml  publish-pypi.yml  release-bump-and-tag.yml
docs/: FAQ.md  GROWTH_METRICS.md  TROUBLESHOOTING.md  USAGE.md  endpoint-matrix.md  generated-method-map.json  known-quirks.md  typed-response-map.json
docs/articles/: common-errors.md  quickstart-15-min.md  social-post-template.md
examples/: .env.example  README.md  basic_user_info.py
examples/celery_app/: tasks.py
examples/django_app/: avito_client.py
examples/fastapi_app/: main.py
examples/webhooks/: fastapi_receiver.py  subscribe.py  unsubscribe.py
specs/: manifest.json
specs/patched/: ads.json  auth.json  cpa.json  delivery-sandbox.json  item.json  job.json  messenger.json  promotion.json  stock-management.json
specs/raw/: accounts-hierarchy.json  cpa.json  delivery-sandbox.json  job.json  messenger.json  str.json
src/pyavitoapi/: __init__.py  auth.py  client.py  generated_registry.py
src/pyavitoapi/generated_models/: __init__.py  accounts_hierarchy.py  ads.py  auction.py  auth.py  autoload.py  autostrategy.py  (+18 more)
tests/contract/: test_coverage.py
tests/integration/: test_client_smoke.py
tests/unit/: test_registry.py  test_transport.py
tools/: build_coverage_report.py  bump_version.py  fetch_specs.py  generate_clients.py  patch_specs.py
(+4 files in other folders)
