[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "avito-python-sdk"
version = "0.2.1"
description = "Async Python SDK for Avito OpenAPI (full endpoint coverage)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "kozandlov" }
]
urls = {
  Repository = "https://github.com/kozandlov/avito-python-sdk",
  Issues = "https://github.com/kozandlov/avito-python-sdk/issues"
}
keywords = ["avito", "sdk", "openapi", "async", "httpx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: AsyncIO",
  "Typing :: Typed"
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyavitoapi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
